fix: element alignment on information section

--- a/sass/bottom-container.sass
+++ b/sass/bottom-container.sass
@@ -8,9 +8,10 @@
 
     &__get-started
         width: 83.4%
-        margin-top: 66px
-        margin-left: 69px
-        margin-bottom: 110px
+        margin-top: 10.4%
+        margin-left: 8.94%
+        font-size: 20px
+        margin-bottom: 5.5em
 
         &__title
             font-size: 56px
@@ -29,30 +30,40 @@
             font-size: 22px
 
     &__information
-        width: 581px
+        width: 80.7%
         grid-row-start: 2
         grid-column-start: 1
         grid-template-columns: repeat(2, 1fr)
         grid-template-rows: repeat(2, 1fr)
-        margin-left: 64px
+        margin-left: 8.89%
         
 
         &__flex
             display: flex
+            width: 100%
             justify-content: space-between
-            margin-bottom: 32px
+            font-size: 20px
+            margin-bottom: 1.6em
 
             &__item
-                width: 273px
-
-        &__item
-            width: 100%px                
+                width: 37.7%
+                font-size: 16px
+                background-color: #F4F4F4
+                border-radius: 24px
+                padding: 1.5em 1.75em 1.5em 1.5em
+                
+                &__title
+                    font-size: 24px
+                    margin: 0
+                
+                &__description
+                    margin: 0.5em 0 0 0
         
-        &__item, &__flex__item
-            justify-self: center
+        &__item
             font-size: 16px
             background-color: #F4F4F4
             border-radius: 24px
+            padding: 1.5em 1.75em 1.5em 1.5em
 
 
     &__image-container
